@@ -9,6 +9,7 @@
 - Improve grouped search supporting to change the columns used with group clause
 - Improve grouped search to support using virtual columns for calculations, defining which DB column use to calculate
 - Improve grouped search supporting other SQL functions for calculate in grouped search, ignoring it in bottom search if rails don't support them in calculate (only sum, count, minimum, maximum average)
+- Improve grouped search supporting using group_by with multiple columns or sql code
 - Rename active_scaffold_habtm_joins to active_scaffold_joins, active_scaffold_habtm_joins is now deprecated
 
 = 4.0.6
